1、准备加入内部加载中进度条。 2、增加获取本地图片的类。 3、加入权限获取的相关代码

--- a/build.gradle
+++ b/build.gradle
@@ -173,6 +173,8 @@ dependencies {
     // 权限申请
     if (mvvmConfig.include.livePermissions) {
         api Deps.livePermissions
+    } else {
+        compileOnly Deps.livePermissions
     }
 
     // paging
