--- a/mvvm-config.groovy.template
+++ b/mvvm-config.groovy.template
@@ -24,6 +24,7 @@ include {
 
     room=false
     swipeRefreshLayout=false
+    slidingPaneLayout=false
     retrofit2=false
     gson=false
     glide=false
