--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -5,4 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <application>
+        <meta-data android:name="isRetrofitUseRx" android:value="${isRetrofitUseRx}"/>
+    </application>
 </manifest>
