--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     api Deps.constraintLayout
     api Deps.slidingPaneLayout
 
+    api Deps.networkResponseAdapter
+
     /**
      * 在 Lifecycles 中使用协程，视图销毁则自动取消
      */
