1、解决库冲突的问题。 2、增加navigation库的引用。 3、解决BaseViewModel实例化错误的问题。

--- a/mvvm-config.groovy.template
+++ b/mvvm-config.groovy.template
@@ -42,6 +42,7 @@ include {
     // 各种 KTX，详见 https://developer.android.google.cn/kotlin/ktx
     reactiveStreamsKTX=false
 
+    natigation=false
     natigationUiKTX=false
     natigationRuntimeKTX=false
     natigationFragmentKTX=false
