解决 DataBinding 下 Fragment 存在的内存泄露问题。

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -93,6 +93,7 @@ ext {
             // Java language implementation
             natigationFragment        : "androidx.navigation:navigation-fragment:${Versions.navigation}",
             natigationUi              : "androidx.navigation:navigation-ui:${Versions.navigation}",
+            natigationSafeArgsPlugin  : "androidx.navigation:navigation-safe-args-gradle-plugin:${Versions.navigation}",
 
             // Dynamic Feature Module Support
             natigationDynamicFeatures : "androidx.navigation:navigation-dynamic-features-fragment:${Versions.navigation}",
