--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,6 +23,11 @@ ext {
             material                  : "com.google.android.material:material:1.1.0",
             swipeRefreshLayout        : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01",
 
+            activity                  : 'androidx.activity:activity:1.2.0-alpha06',
+            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-alpha06',
+            fragment                  : 'androidx.fragment:fragment:1.3.0-alpha06',
+            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-alpha06',
+
             constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.0-beta6",
             slidingPaneLayout         : "androidx.slidingpanelayout:slidingpanelayout:1.1.0-rc01",
 
@@ -77,7 +82,6 @@ ext {
             loadSir                   : 'com.kingja.loadsir:loadsir:1.3.8',
 
             // ktx
-            fragmentKTX               : "androidx.fragment:fragment-ktx:1.2.4",
             // 在 LiveData 中使用协程
             lifecycleLiveDataKTX      : "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0",
             // 在 Lifecycles 中使用协程，视图销毁则自动取消
