--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,8 @@
 ext {
-    mvvmConfig = new ConfigSlurper().parse(new File("./mvvm-config.groovy").toURI().toURL())
-
     SysConfig = [
-            compileSdkVersion: mvvmConfig.SDKVersion.compileSdkVersion,
-            minSdkVersion    : mvvmConfig.SDKVersion.minSdkVersion,
-            targetSdkVersion : mvvmConfig.SDKVersion.targetSdkVersion
+            compileSdkVersion: SDKVersion.compileSdkVersion,
+            minSdkVersion    : SDKVersion.minSdkVersion,
+            targetSdkVersion : SDKVersion.targetSdkVersion
     ]
 
     Versions = [
@@ -138,7 +136,7 @@ static def curDateTime() {
 }
 
 static void checkMVVMConfigProperty(Object o) {
-    if (!(o instanceof Boolean)) {
+    if (o == null) {
         throw new RuntimeException("mvvm-config.groovy 配置文件是否缺少了某个属性？属性列表需要和 MVVMArchCode/mvvm-config.groovy.template 文件保持一致")
     }
 }
