1、解决rx请求失败时，complete不回调的问题。 2、优化retrofit原生请求在界面销毁时取消的功能。

--- a/build.gradle
+++ b/build.gradle
@@ -178,6 +178,7 @@ dependencies {
     } else {
         // 不使用 rx，以下是为了让封装的代码编译通过
         compileOnly(Deps.retrofit2RxJava2)
+        compileOnly Deps.rxAndroid2
     }
 
     // debug 阶段内存泄露检测
