封装 observe，优化代码

--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures{
+        dataBinding = true
     }
 
     compileOptions {
