--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ android {
 
         consumerProguardFiles "consumer-rules.pro"
 
-        checkMVVMConfigProperty(IncludeLib.retrofit2RxJava2)
+        checkMVVMConfigProperty(IncludeLib.retrofit2RxJava2, "retrofit2RxJava2")
         manifestPlaceholders = [
                 "isRetrofitUseRx": IncludeLib.retrofit2RxJava2
         ]
@@ -86,7 +86,7 @@ dependencies {
     api Deps.lifecycleJava8
 
     // 监控应用的生命周期
-    checkMVVMConfigProperty(IncludeLib.lifecycleProcess)
+    checkMVVMConfigProperty(IncludeLib.lifecycleProcess, "lifecycleProcess")
     if (IncludeLib.lifecycleProcess) {
         api Deps.lifecycleProcess
     } else {
@@ -94,7 +94,7 @@ dependencies {
     }
 
     // 内嵌的加载中库
-    checkMVVMConfigProperty(IncludeLib.loadSir)
+    checkMVVMConfigProperty(IncludeLib.loadSir, "loadSir")
     if (IncludeLib.loadSir) {
         api Deps.loadSir
     } else {
@@ -102,7 +102,7 @@ dependencies {
     }
 
     // RecyclerView
-    checkMVVMConfigProperty(IncludeLib.recyclerView)
+    checkMVVMConfigProperty(IncludeLib.recyclerView, "recyclerView")
     if (IncludeLib.recyclerView) {
         api Deps.recyclerView
     } else {
@@ -110,7 +110,7 @@ dependencies {
     }
 
     // 数据库
-    checkMVVMConfigProperty(IncludeLib.room)
+    checkMVVMConfigProperty(IncludeLib.room, "room")
     if (IncludeLib.room) {
         api Deps.roomRuntime
         kapt Deps.roomCompiler
@@ -119,7 +119,7 @@ dependencies {
     }
 
     // Android 提供的下拉刷新，上拉加载可以使用第三方的 SmartRefreshLayout
-    checkMVVMConfigProperty(IncludeLib.swipeRefreshLayout)
+    checkMVVMConfigProperty(IncludeLib.swipeRefreshLayout, "swipeRefreshLayout")
     if (IncludeLib.swipeRefreshLayout) {
         api Deps.swipeRefreshLayout
     } else {
@@ -127,7 +127,7 @@ dependencies {
     }
 
     // 网络，默认使用 gson 解析 json
-    checkMVVMConfigProperty(IncludeLib.retrofit2)
+    checkMVVMConfigProperty(IncludeLib.retrofit2, "retrofit2")
     if (IncludeLib.retrofit2) {
         api Deps.retrofit2
         api Deps.gson
@@ -138,7 +138,7 @@ dependencies {
     }
 
     // 图片，使用 glide
-    checkMVVMConfigProperty(IncludeLib.glide)
+    checkMVVMConfigProperty(IncludeLib.glide, "glide")
     if (IncludeLib.glide) {
         api Deps.glide
         kapt Deps.glideCompiler
@@ -147,7 +147,7 @@ dependencies {
     }
 
     // 权限申请
-    checkMVVMConfigProperty(IncludeLib.livePermissions)
+    checkMVVMConfigProperty(IncludeLib.livePermissions, "livePermissions")
     if (IncludeLib.livePermissions) {
         api Deps.livePermissions
     } else {
@@ -155,8 +155,9 @@ dependencies {
     }
 
     // rx 系列，Kotlin 最好使用 flow，不要使用 rx
-    checkMVVMConfigProperty(IncludeLib.roomRxJava2)
-    checkMVVMConfigProperty(IncludeLib.retrofit2RxJava2)
+    checkMVVMConfigProperty(IncludeLib.roomRxJava2, "roomRxJava2")
+    checkMVVMConfigProperty(IncludeLib.retrofit2RxJava2, "retrofit2RxJava2")
+    checkMVVMConfigProperty(IncludeLib.rxJava2, "rxJava2")
 
     if (IncludeLib.roomRxJava2 || IncludeLib.retrofit2RxJava2 || IncludeLib.rxJava2) {
         // 上面三个任意一个开启了，都需要以下这两个
@@ -182,7 +183,7 @@ dependencies {
     }
 
     // debug 阶段内存泄露检测
-    checkMVVMConfigProperty(IncludeLib.leakCanary2)
+    checkMVVMConfigProperty(IncludeLib.leakCanary2, "leakCanary2")
     if (IncludeLib.leakCanary2) {
         debugImplementation Deps.leakCanary2
     }
