--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -135,9 +135,9 @@ static def curDateTime() {
     return new Date().format("yyyy-MM-dd_HH-mm")
 }
 
-static void checkMVVMConfigProperty(Object o) {
+static void checkMVVMConfigProperty(Object o, String p) {
     if (o == null) {
-        throw new RuntimeException("mvvm-config.groovy 配置文件是否缺少了某个属性？属性列表需要和 MVVMArchCode/mvvm-config.groovy.template 文件保持一致")
+        throw new RuntimeException("mvvm-config.groovy 配置文件缺少了 $p 属性，属性列表需要和 MVVMArchitecture/mvvm-config.groovy.template 文件保持一致")
     }
 }
 
