--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,8 @@ ext {
             retrofit2     : "2.9.0",
             kotlinVersion : '1.3.72',
             bindingAdapter: '4.0.0',
-            navigation   : "2.3.0-rc01"
+            navigation    : "2.3.0-rc01",
+            hilt          : "2.28-alpha",
     ]
 
     Deps = [
@@ -110,6 +111,13 @@ ext {
             workKTX                   : "androidx.work:work-runtime-ktx:2.3.4",
             paletteKTX                : "androidx.palette:palette-ktx:1.0.0",
             collectionKTX             : "androidx.collection:collection-ktx:1.1.0",
+    ]
+
+    Hilt = [
+            pluginName: "dagger.hilt.android.plugin",
+            plugin    : "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}",
+            core      : "com.google.dagger:hilt-android:${Versions.hilt}",
+            compiler  : "com.google.dagger:hilt-android-compiler:${Versions.hilt}",
     ]
 }
 
