--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -145,7 +145,7 @@ static def curDateTime() {
 
 static void checkMVVMConfigProperty(Object o, String p) {
     if (o == null) {
-        throw new RuntimeException("mvvm-config.groovy 配置文件缺少了 $p 属性，属性列表需要和 MVVMArchitecture/mvvm-config.groovy.template 文件保持一致")
+        throw new RuntimeException("mvvm-config.gradle 配置文件缺少了 $p 属性，属性列表需要和 MVVMArchitecture/mvvm-config.gradle.template 文件保持一致")
     }
 }
 
