--- a/mvvm-config.gradle.template
+++ b/mvvm-config.gradle.template
@@ -9,9 +9,7 @@ ext {
             // 内存泄露
             leakCanary2       : true,
             // 应用前后台监听
-            lifecycleProcess  : true,
-
-            // 通常来说以上都需要为 true
+            lifecycleProcess  : false,
 
             recyclerView      : false,
 
