--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,12 +18,12 @@ ext {
             material                  : "com.google.android.material:material:1.2.0",
             swipeRefreshLayout        : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
 
-            activity                  : 'androidx.activity:activity:1.2.0-alpha07',
-            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-alpha07',
-            fragment                  : 'androidx.fragment:fragment:1.3.0-alpha07',
-            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-alpha07',
+            activity                  : 'androidx.activity:activity:1.2.0-alpha08',
+            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-alpha08',
+            fragment                  : 'androidx.fragment:fragment:1.3.0-alpha08',
+            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-alpha08',
 
-            constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.0-rc1",
+            constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.1",
             slidingPaneLayout         : "androidx.slidingpanelayout:slidingpanelayout:1.1.0",
 
             paging                    : "androidx.paging:paging-runtime:2.1.2",
