--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,12 +1,12 @@
 ext {
     Versions = [
-            glideVersion  : "4.11.0",
-            room          : "2.2.5",
+            glideVersion  : "4.12.0",
+            room          : "2.2.6",
             retrofit2     : "2.9.0",
-            kotlinVersion : '1.3.72',
+            kotlinVersion : '1.4.21',
             bindingAdapter: '4.0.0',
-            navigation    : "2.3.0",
-            hilt          : "2.28.3-alpha",
+            navigation    : "2.3.3",
+            hilt          : "2.31.2-alpha",
             lifecycle     : "2.2.0",
     ]
 
@@ -15,15 +15,15 @@ ext {
             // 官方支持库
             appcompat                 : "androidx.appcompat:appcompat:1.2.0",
             recyclerView              : "androidx.recyclerview:recyclerview:1.1.0",
-            material                  : "com.google.android.material:material:1.2.0",
+            material                  : "com.google.android.material:material:1.3.0",
             swipeRefreshLayout        : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
 
-            activity                  : 'androidx.activity:activity:1.2.0-alpha08',
-            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-alpha08',
-            fragment                  : 'androidx.fragment:fragment:1.3.0-alpha08',
-            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-alpha08',
+            activity                  : 'androidx.activity:activity:1.2.0-rc01',
+            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-rc01',
+            fragment                  : 'androidx.fragment:fragment:1.3.0-rc02',
+            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-rc02',
 
-            constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.1",
+            constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.4",
             slidingPaneLayout         : "androidx.slidingpanelayout:slidingpanelayout:1.1.0",
 
             paging                    : "androidx.paging:paging-runtime:2.1.2",
@@ -58,12 +58,12 @@ ext {
             rxKotlin                  : "io.reactivex.rxjava2:rxkotlin:2.3.0",
 
             // 内存泄露
-            leakCanary2               : 'com.squareup.leakcanary:leakcanary-android:2.4',
+            leakCanary2               : 'com.squareup.leakcanary:leakcanary-android:2.6',
 
             // kotlin
             kotlinStdLib              : "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlinVersion}",
             kotlinPlugin              : "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlinVersion}",
-            kotlinKTX                 : "androidx.core:core-ktx:1.3.0",
+            kotlinKTX                 : "androidx.core:core-ktx:1.3.2",
 
             // 绑定库
             bindingAdapter            : "me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:${Versions.bindingAdapter}",
