--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,32 +1,32 @@
 ext {
     Versions = [
             glideVersion  : "4.12.0",
-            room          : "2.2.6",
+            room          : "2.3.0",
             retrofit2     : "2.9.0",
             kotlinVersion : '1.4.21',
             bindingAdapter: '4.0.0',
-            navigation    : "2.3.3",
-            hilt          : "2.31.2-alpha",
-            lifecycle     : "2.2.0",
+            navigation    : "2.3.5",
+            hilt          : "2.36",
+            lifecycle     : "2.3.1",
     ]
 
     Deps = [
 
             // 官方支持库
-            appcompat                 : "androidx.appcompat:appcompat:1.2.0",
-            recyclerView              : "androidx.recyclerview:recyclerview:1.1.0",
+            appcompat                 : "androidx.appcompat:appcompat:1.3.0",
+            recyclerView              : "androidx.recyclerview:recyclerview:1.2.0",
             material                  : "com.google.android.material:material:1.3.0",
             swipeRefreshLayout        : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
 
-            activity                  : 'androidx.activity:activity:1.2.0-rc01',
-            activityKTX               : 'androidx.activity:activity-ktx:1.2.0-rc01',
-            fragment                  : 'androidx.fragment:fragment:1.3.0-rc02',
-            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.0-rc02',
+            activity                  : 'androidx.activity:activity:1.2.3',
+            activityKTX               : 'androidx.activity:activity-ktx:1.2.3',
+            fragment                  : 'androidx.fragment:fragment:1.3.4',
+            fragmentKTX               : 'androidx.fragment:fragment-ktx:1.3.4',
 
             constraintLayout          : "androidx.constraintlayout:constraintlayout:2.0.4",
             slidingPaneLayout         : "androidx.slidingpanelayout:slidingpanelayout:1.1.0",
 
-            paging                    : "androidx.paging:paging-runtime:2.1.2",
+            paging                    : "androidx.paging:paging-runtime:3.0.0",
             viewPager2                : "androidx.viewpager2:viewpager2:1.0.0",
 
             lifecycleJava8            : "androidx.lifecycle:lifecycle-common-java8:$Versions.lifecycle",
