--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@ ext {
             glideVersion  : "4.12.0",
             room          : "2.3.0",
             retrofit2     : "2.9.0",
-            kotlinVersion : '1.4.21',
+            kotlinVersion : '1.5.10',
             bindingAdapter: '4.0.0',
             navigation    : "2.3.5",
             hilt          : "2.36",
@@ -14,7 +14,7 @@ ext {
 
             // 官方支持库
             appcompat                 : "androidx.appcompat:appcompat:1.3.0",
-            recyclerView              : "androidx.recyclerview:recyclerview:1.2.0",
+            recyclerView              : "androidx.recyclerview:recyclerview:1.2.1",
             material                  : "com.google.android.material:material:1.3.0",
             swipeRefreshLayout        : "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
 
@@ -35,14 +35,12 @@ ext {
             // 数据库
             roomRuntime               : "androidx.room:room-runtime:$Versions.room",
             roomCompiler              : "androidx.room:room-compiler:$Versions.room",
-            roomRxJava2               : "androidx.room:room-rxjava2:$Versions.room",
 
             // debugImplementation，可以在debug阶段通过浏览器看到数据库
             debugDB                   : "com.amitshekhar.android:debug-db:1.0.6",
 
             // 网络
             retrofit2                 : "com.squareup.retrofit2:retrofit:$Versions.retrofit2",
-            retrofit2RxJava2          : "com.squareup.retrofit2:adapter-rxjava2:$Versions.retrofit2",
             networkResponseAdapter    : "com.github.haroldadmin:NetworkResponseAdapter:4.0.1",
 
             // 图片加载
@@ -52,13 +50,8 @@ ext {
             gson                      : "com.google.code.gson:gson:2.8.6",
             gsonConverter             : "com.squareup.retrofit2:converter-gson:2.7.2",
 
-            // Rx
-            rxAndroid2                : "io.reactivex.rxjava2:rxandroid:2.1.1",
-            rxJava2                   : "io.reactivex.rxjava2:rxjava:2.2.10",
-            rxKotlin                  : "io.reactivex.rxjava2:rxkotlin:2.3.0",
-
             // 内存泄露
-            leakCanary2               : 'com.squareup.leakcanary:leakcanary-android:2.6',
+            leakCanary2               : 'com.squareup.leakcanary:leakcanary-android:2.7',
 
             // kotlin
             kotlinStdLib              : "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlinVersion}",
@@ -122,12 +115,12 @@ ext {
  */
 static def addRepository(RepositoryHandler handler) {
     handler.google()
+    handler.mavenCentral()
     handler.maven { url 'https://maven.aliyun.com/repository/google' }
     handler.maven { url 'https://maven.aliyun.com/repository/jcenter' }
-    handler.maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+    handler.maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
     handler.maven { url "https://www.jitpack.io" }
     handler.maven { url "https://dl.bintray.com/tencentqcloudterminal/maven" }
-    handler.mavenCentral()
 }
 
 // 添加到全局的变量中
