--- a/build.gradle
+++ b/build.gradle
@@ -97,13 +97,13 @@ dependencies {
     // 使用 Java8 替换 lifecycleCompiler，让 vm 可以感知 v 生命周期
     api Deps.lifecycleJava8
 
-    // 监控应用的生命周期
-    checkMVVMConfigProperty(IncludeLib.lifecycleProcess, "lifecycleProcess")
-    if (IncludeLib.lifecycleProcess) {
-        api Deps.lifecycleProcess
-    } else {
-        compileOnly Deps.lifecycleProcess
-    }
+    // 监控应用的生命周期，在 databinding 的最新版本中，似乎已经包含了，所以这里不提供选项了，默认开启
+//    checkMVVMConfigProperty(IncludeLib.lifecycleProcess, "lifecycleProcess")
+//    if (IncludeLib.lifecycleProcess) {
+//        api Deps.lifecycleProcess
+//    } else {
+//        compileOnly Deps.lifecycleProcess
+//    }
 
     // 内嵌的加载中库
     checkMVVMConfigProperty(IncludeLib.loadSir, "loadSir")
